--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -26,12 +26,12 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "prettier": "3.6.2",
     "vite": "^7.1.4",
     "vitest": "^3.2.4"
   }
